--- a/src/templates/layout/_header.pug
+++ b/src/templates/layout/_header.pug
@@ -7,10 +7,10 @@ header.main-header.main-header-js
             a(href="/" class="site-logo__wrapper")
                 img(src="images/logo/logo.png" alt=data.mainHeader.siteLogo.alt width="94" height="28" class="site-logo__img")
             h1.text-hidden= data.mainHeader.h1
-            button(aria-label="Side navigation toggle button" class="side-nav__button-toggle site-nav__button-toggle side-nav-toggle-js")
+            button(aria-label="Side navigation toggle button" class="side-nav__button-toggle side-nav-toggle-js")
                     span.icon.icon-2.icon-menu.color-white
             nav.site-nav-wrapper
-                ul.row.site-nav__list
+                ul.site-nav__list
                     li
                         a(href="#home" data-spy class="site-nav__link active")= data.mainHeader.siteNav.home
                     li
@@ -22,7 +22,7 @@ header.main-header.main-header-js
                     li
                         a(href="#contact" data-spy class="site-nav__link")= data.mainHeader.siteNav.contact
                     li
-                        ul.row.language-settings__list.language-settings-separator-left
+                        ul.language-settings__list.language-settings-separator-left
                             each value in langs
                                 if lang !== value
                                     li
@@ -31,20 +31,20 @@ nav.side-nav-wrapper.side-nav-js
     button(aria-label="Side navigation toggle button" class="side-nav__button-toggle side-nav-toggle-js")
         span.icon.icon-2.icon-cancel.color-primary-dark
     .side-nav-overlay
-        ul.row.flex-column.flex-nowrap.align-content-center.align-items-center.justify-content-center.side-nav__list.site-nav__list
+        ul.side-nav__list
             li
-                a(href="#home" data-spy class="site-nav__link active")= data.mainHeader.siteNav.home
+                a(href="#home" data-spy class="side-nav__link active")= data.mainHeader.siteNav.home
             li
-                a(href="#about-me" data-spy class="site-nav__link")= data.mainHeader.siteNav.aboutMe
+                a(href="#about-me" data-spy class="side-nav__link")= data.mainHeader.siteNav.aboutMe
             li
-                a(href="#services" data-spy class="site-nav__link")= data.mainHeader.siteNav.services
+                a(href="#services" data-spy class="side-nav__link")= data.mainHeader.siteNav.services
             li
-                a(href="#portfolio" data-spy class="site-nav__link")= data.mainHeader.siteNav.portfolio
+                a(href="#portfolio" data-spy class="side-nav__link")= data.mainHeader.siteNav.portfolio
             li
-                a(href="#contact" data-spy class="site-nav__link")= data.mainHeader.siteNav.contact
+                a(href="#contact" data-spy class="side-nav__link")= data.mainHeader.siteNav.contact
             li
-                ul.row.language-settings__list.language-settings-separator-top
+                ul.language-settings__list.language-settings-separator-top
                     each value in langs
                         if lang !== value
                             li
-                                a(href="/" + value class="site-nav__link language-settings__link")= value
+                                a(href="/" + value class="side-nav__link language-settings__link")= value
