--- a/src/sass/components/_services.scss
+++ b/src/sass/components/_services.scss
@@ -12,12 +12,22 @@ $services-1-item__border: 1px solid rgba($color__black-1, 0.1) !default;
     &-wrapper {
         padding-bottom: 157px;
     }
+    &-container {
+        width: 1140px;
+        overflow: hidden;
+        padding: 0 15px;
+        margin: 0 auto;
+        @include media-breakpoint-down(lg) {
+            width: 100%;
+            padding: 0;
+        }
+    }
     &-item {
         width: 305px;
         background-color: $services-1-item__background-color-0;
         border: $services-1-item__border;
         padding: 25px;
-        margin: 50px auto;
+        margin: 35px auto;
         &-icon {
             width: 100%;
             height: 115px;
