--- a/src/sass/components/_site-nav.scss
+++ b/src/sass/components/_site-nav.scss
@@ -11,6 +11,7 @@ $site-nav__link__height: $site-nav-wrapper__height !default;
 $site-nav__link__font-size: 0.85em !default;
 $site-nav__link__font-weight: $font-weight__bolder-7 !default;
 $site-nav__link__color: $tertiary-text-color !default;
+
 // .site-nav__link:hover
 $site-nav__link-hover__color: $color__white !default;
 // .site-nav__link:after
@@ -30,15 +31,15 @@ $site-nav__link-active-after__background-color: $primary-color-dark !default;
         }
     }
     &__list {
-        list-style: none;
-        @extend %no-padding-margin;
+        @extend %flex;
+        @extend %no-list;
     }
     &__link {
         height: $site-nav__link__height;
         position: relative;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend .align-items-center;
+        @extend .justify-content-center;
         font-size: $site-nav__link__font-size;
         font-weight: $site-nav__link__font-weight;
         text-align: center;
@@ -70,14 +71,6 @@ $site-nav__link-active-after__background-color: $primary-color-dark !default;
             &::after {
                 height: 3px;
                 background-color: $site-nav__link-active-after__background-color;
-            }
-        }
-    }
-    &__button {
-        &-toggle {
-            display: none;
-            @include media-breakpoint-down(md) {
-                display: block;
             }
         }
     }
